# shared-mime-info

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  HACKING.md  NEWS  README.md  freedesktop.org.xml.in  meson.build  meson_options.txt
.tx/: config
data/: freedesktop.org.xml.in  meson.build  shared-mime-info-spec.xml
po/: LINGUAS  POTFILES.skip  af.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  cy.po  da.po  de.po  el.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  ia.po  id.po  is.po  it.po  ja.po  ka.po  (+39 more)
src/: meson.build  test-subclassing.c  update-mime-database.cpp
subprojects/: xdgmime.wrap
tests/: meson.build
tests/mime-detection/: App1_1.0.0.0_x64.appx  App1_1.0.0.0_x64.appxbundle  App1_1.0.0.0_x64.msix  App1_1.0.0.0_x64.msixbundle  App1_x64.appinstaller  Bierkisten.stp  C.lnk  StaticLib1.lib  UserAccount.cts  add.wasm  app-window.slint  appimage-demo-qt5-latest-x86_64.AppImage  awk-prog-gawk.awk  awk-prog-nawk.awk  awk-prog.awk  bashscript.sh  bezel-v3-short-edge-uncompressed.amf  bezel-v3-short-edge.amf  blank.lrf  blue.wdp  blueprint.blp  boardingpasses.pkpasses  commodore-cartridge-c64-header.crt  commodore-disk-blank-truncated.d90  commodore-disk-blank-truncated.g64  commodore-disk-blank-truncated.g71  commodore-disk-blank-truncated.x64  commodore-disk-header.d90  commodore-disk-header.g64  commodore-disk-header.g71  commodore-disk-header.x64  commodore-disk-truncated-nomagic.d64  commodore-disk-truncated-nomagic.d71  commodore-disk-truncated-nomagic.d80  commodore-disk-truncated-nomagic.d81  commodore-disk-truncated-nomagic.d82  commodore-tape-header.t64  commodore-tape-hello-truncated.tap  compound.wpd  curl_google.scap  (+155 more)
tests/mime-detection/tiledsample/: tiled_sample.license  tiled_sample.tmx  tiled_sample.tsx
