
option('update-mimedb', type: 'boolean', value: false,
    description: 'Call update-mime-database after install. It should not be enabled if DESTDIR is used.',
)

option('build-tools', type: 'boolean', value: true,
    description: 'Build the update-mime-database tools. If set to false only the mime data is installed.',
)

option('build-translations', type: 'boolean', value: true,
    description: 'Build the translations.'
)

option('build-tests', type: 'boolean', value: true,
    description: 'Build the test suite.  If not set then there will be no \'test\' build target.',
)

option('xdgmime-path', type: 'string', value: './xdgmime',
    description: 'Path to the xdgmime executable',
)
